cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Test_Notes__c.field-meta.xml
<CustomField>
    <fullName>Test_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter in notes about the participant test.</inlineHelpText>
    <label>Test Notes</label>
    <type>TextArea</type>
</CustomField>