cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/URI__c.field-meta.xml
<CustomField>
    <fullName>URI__c</fullName>
    <formula>Connection__r.URI_IP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>URI from the Connection Record.</inlineHelpText>
    <label>URI</label>
    <type>Text</type>
</CustomField>