cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/View_Only__c.field-meta.xml
<CustomField>
    <fullName>View_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to indicate this participant will only watch the conference- webcast or other.</description>
    <inlineHelpText>Check if the participant is NOT EXPECTED to be seen or heard.</inlineHelpText>
    <label>View Only?</label>
    <type>Checkbox</type>
</CustomField>