cititechdNew2024Jan/force-app/main/default/objects/Participants__c/fields/Webinar_Details__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>please enter webinar registrion reports, etc in this field. It is Rich texts so many kinds of data</inlineHelpText>
    <label>Webinar Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>