cititechdNew2024Jan/force-app/main/default/objects/Participants__c/listViews/All_OE_Participants.listView-meta.xml
<ListView>
    <fullName>All_OE_Participants</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Assigned_User__c</columns>
    <columns>Connection__c</columns>
    <columns>Room_Name__c</columns>
    <columns>URI__c</columns>
    <columns>Meeting_Start_Date_Time__c</columns>
    <columns>Meeting_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All OE Participants</label>
</ListView>