cititechdNew2024Jan/force-app/main/default/objects/Participants__c/listViews/All_Participants.listView-meta.xml
<ListView>
    <fullName>All_Participants</fullName>
    <columns>NAME</columns>
    <columns>Meeting__c</columns>
    <columns>Assigned_User__c</columns>
    <columns>Meeting_Start_Date_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Meeting_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Have_we_retested_the_connection__c</columns>
    <columns>Retest_Results__c</columns>
    <columns>Dial_In_Date_Time__c</columns>
    <columns>Admin_Contact__c</columns>
    <columns>IT_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <filters>
        <field>Meeting_Start_Date_Time__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>All Future Participants</label>
</ListView>