cititechdNew2024Jan/force-app/main/default/objects/Participants__c/listViews/Recordings.listView-meta.xml
<ListView>
    <fullName>Recordings</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Meeting_Start_Date_Time__c</columns>
    <columns>Meeting_Name__c</columns>
    <columns>Meeting_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Meeting__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>Recordings</label>
</ListView>