cititechdNew2024Jan/force-app/main/default/objects/Participants__c/listViews/Unassigned_Participants.listView-meta.xml
<ListView>
    <fullName>Unassigned_Participants</fullName>
    <columns>NAME</columns>
    <columns>Meeting__c</columns>
    <columns>Meeting_Start_Date_Time__c</columns>
    <columns>Meeting_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Assigned_User__c</columns>
    <columns>Have_we_retested_the_connection__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Unassigned</value>
    </filters>
    <label>Unassigned Participants</label>
</ListView>